Fix View Button placement on mobile

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -35,6 +35,8 @@ a {
   color: #000;
   text-transform: uppercase;
   font-size: 4rem;
+  margin-bottom: none;
+  padding-bottom: none;
 }
 
 .section-subtitle {
@@ -44,3 +46,12 @@ a {
   padding: 10px;
 }
 
+
+@media only screen and (max-width: $iphone-breakpoint) {
+  .section-title {
+    display: none;
+  }
+  .section-subtitle {
+    border: 2px solid #000;
+  }
+}
