--- a/src/styles/components/headercontent.scss
+++ b/src/styles/components/headercontent.scss
@@ -97,14 +97,15 @@
     justify-content: center;
     font-size: 24px;
     width: 40%;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto 40px auto;
+    // margin-right: auto;
+    // margin-left: auto;
     text-align: center;
     color: #0bcddc;
 }
 
 .HeaderContent-header .button {
-    display: block;
+    // display: block;
     font-size: 24px;
     color: $blue;
     background-color: $off-white;
@@ -150,6 +151,7 @@
         font-size: 44px;
     }
     .HeaderContent-header .button {
+        // display: flex;
       margin-top: 48rem;
     }
 }
