--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -54,8 +54,8 @@
 
 @media only screen and (max-width: 480px) {
   .NavBar-navBar {
-    width: 76vw;
-    font-size: 14px;
+    width: 90vw;
+    font-size: 17px;
   }
 
   .NavBar-item {
@@ -65,7 +65,7 @@
 
 @media only screen and (max-width: 435px) {
   .NavBar-navBar {
-    font-size: 14px;
+    font-size: 18px;
   }
 
   .NavBar-item {
